--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<embed src="https://github.com/WildWest-Productions/legals/raw/main/WildWest_Productions_LLC_Terms_of_Service.pdf" type="application/pdf">
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width">
+  </head>
+  <body>
+    <object data="https://github.com/WildWest-Productions/legals/raw/main/WildWest_Productions_LLC_Terms_of_Service.pdf" type="application/pdf" style="min-height:100vh;width:100%"></object>
+  </body>
+</html>
