--- a/index.html
+++ b/index.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width">
-  </head>
-  <body>
-    <object data="CloudKey_Terms_of_Service.pdf" type="application/pdf" style="min-height:100vh;width:100%"></object>
-  </body>
-</html>
+<a href="WildWest-Productions.github.io/CloudKey_Terms_of_Service.pdf" target="_blank">PDF.</a>
